
  [ Frans Pop ]
  * Fix logic error in build/util/pkg-list to get rid of incorrect warnings
    about missing lists.
  * Add build dependencies needed to build PDF/TXT versions of the manual.
  * Make main build script for the manual fail on errors.
  * Introduce cascading stylesheet for the HTML version of the manual.
  * Modify build depends to allow openjade1.3 as well as openjade.

  [ Martin Michlmayr ]
  * Add support for rescue mode to mipsel/cobalt.
  * Rename the default target of {mips,mipsel}/sb1-swarm-bn from
    'installer' to 'install' in compliance with other arches.
  * Add support for rescue mode to {mips,mipsel}/sb1-swarm-bn.

  [ Stephen R. Marenka ]
  * m68k tools rework.
  * incorporate boot/m68k/amiga scripts in tools.
  * initial support for future penguin and amiboot packages.
  * drop 2.2 kernel support for everything but macs.

  [ Eddy Petrisor ]
  * Removed ASCII characters from needed-characters/vi

  [ David Nusinow ]
  * Add attribution to Karsten M. Self for chroot-install section of the
    manual. Closes: #316487

  [ Joey Hess ]
  * Switch i386 to 2.6.11 kernel.
  * Add file-preseed to netboot image so file-based preseeding can be used on
    netboot mini iso.
  * Remove file-preseed from netboot; that won't work since netboot never
    mounts a CD, duh.
  * Enable text frontend for netboot on all arches.
  * Aribitrarily increased sparc ramdisk_size to 9000 from 8192, since
    it's at least 8230 big now due to added languages.
  * Build-depend on newest libdebian-installer as some udebs have a versioned
    dependency on it.
  * Switch i386 to 2.6.12 kernel.

 -- Frans Pop <fjp@debian.org>  Sun, 31 Jul 2005 22:50:20 +0200

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual
    - Add PDF and TXT formats for official builds of the manual
  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.