@@ -184,15 +184,16 @@
   <!ENTITY new-to-unix.xml      SYSTEM "##SRCPATH##/post-install/new-to-unix.xml">
   <!ENTITY orientation.xml      SYSTEM "##SRCPATH##/post-install/orientation.xml">
   <!ENTITY reactivating-win.xml SYSTEM "##SRCPATH##/post-install/reactivating-win.xml">
-  <!ENTITY further-reading.xml SYSTEM "##SRCPATH##/post-install/further-reading.xml">
-  <!ENTITY kernel-baking.xml SYSTEM "##SRCPATH##/post-install/kernel-baking.xml">
+  <!ENTITY further-reading.xml  SYSTEM "##SRCPATH##/post-install/further-reading.xml">
+  <!ENTITY kernel-baking.xml    SYSTEM "##SRCPATH##/post-install/kernel-baking.xml">
   <!ENTITY rescue.xml           SYSTEM "##SRCPATH##/post-install/rescue.xml">
 
  <!ENTITY tech-info.xml        SYSTEM "##SRCPATH##/tech-info/tech-info.xml">
  <!ENTITY installation-howto.xml SYSTEM "##SRCPATH##/howto/installation-howto.xml">
- <!ENTITY random-bits.xml         SYSTEM "##SRCPATH##/appendix/random-bits.xml">
-  <!ENTITY example-preseed.xml    SYSTEM "##SRCPATH##/appendix/example-preseed.xml">
+ <!ENTITY random-bits.xml      SYSTEM "##SRCPATH##/appendix/random-bits.xml">
+  <!ENTITY example-preseed.xml  SYSTEM "##SRCPATH##/appendix/example-preseed.xml">
   <!ENTITY files.xml            SYSTEM "##SRCPATH##/appendix/files.xml">
   <!ENTITY chroot-install.xml   SYSTEM "##SRCPATH##/appendix/chroot-install.xml">
+  <!ENTITY plip.xml             SYSTEM "##SRCPATH##/appendix/plip.xml">
  <!ENTITY administrivia.xml    SYSTEM "##SRCPATH##/administrivia/administrivia.xml">
  <!ENTITY gpl.xml              SYSTEM "##SRCPATH##/appendix/gpl.xml">
