@@ -133,6 +133,13 @@ The section on chrooted installations in this manual
 (<xref linkend="linux-upgrade"/>) was derived in part from
 documents copyright Karsten M. Self.
 
+</para><para>
+
+The section on installations over plip in this manual
+(<xref linkend="plip"/>) was based on the
+<ulink url="&url-plip-install-howto;">PLIP-Install-HOWTO</ulink>
+by Gilles Lamiral.
+
 </para>
  </sect1>
 
