@@ -158,6 +158,8 @@ debian-installer (20050630) UNRELEASED; urgency=low
   * Make main build script for the manual fail on errors.
   * Introduce cascading stylesheet for the HTML version of the manual.
   * Modify build depends to allow openjade1.3 as well as openjade.
+  * Add appendix on installing over plip, contributed by Sylvain Ferriol;
+    edited by Frans Pop.
 
   [ Martin Michlmayr ]
   * Add support for rescue mode to mipsel/cobalt.
@@ -191,7 +193,7 @@ debian-installer (20050630) UNRELEASED; urgency=low
     dependency on it.
   * Switch i386 to 2.6.12 kernel.
 
- -- Frans Pop <fjp@debian.org>  Sun, 31 Jul 2005 22:50:20 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 03 Aug 2005 15:15:20 +0200
 
 debian-installer (20050317) unstable; urgency=low
 
